--- a/config/samples/kantetask_v1_entrytask.yaml
+++ b/config/samples/kantetask_v1_entrytask.yaml
@@ -11,14 +11,15 @@ spec:
   image: nginx:1.14.2
   selector:
     matchLabels:
-      app: nginx
+      app: entrytask
   template:
     metadata:
       labels:
-        app: nginx
+        app: entrytask
     spec:
       containers:
         - name: nginx
           image: nginx:1.14.2
           ports:
             - containerPort: 80
+
