feat: update role.yaml config

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,9 +7,16 @@ rules:
 - apiGroups:
     - ""
   resources:
-    - "*"
+    - pods
+    - services
   verbs:
-    - "*"
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
 - apiGroups:
   - kantetask.codereliant.io
   resources:
