--- a/config/prometheus/prometheus-service.yaml
+++ b/config/prometheus/prometheus-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - name: web
+    - name: https
       nodePort: 30900
       port: 9090
       protocol: TCP
