--- a/config/prometheus/prometheus-service.yaml
+++ b/config/prometheus/prometheus-service.yaml
@@ -9,6 +9,6 @@ spec:
       nodePort: 30900
       port: 9090
       protocol: TCP
-      targetPort: https
+      targetPort: 8443
   selector:
     prometheus: prometheus
